--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 axum = "0.8.3"
 tokio = { version = "1.36", features = ["full"] }
 tower-http = { version = "0.6.4", features = ["fs"] }
+serde = { version = "1.0.218", features = ["derive"] }
+serde_json = "1.0.140"
+uuid = { version = "1.7.0", features = ["v4", "serde"] }
 
 [dev-dependencies]
 reqwest = { version = "0.12.21", default-features = false, features = ["json"] }
