--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -14,13 +14,15 @@ serde_json = "1.0"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
 async-trait = "0.1.78"
 validator = "0.16.1"
-
-# SPRINT 3: JWT dependencies for authentication
-jsonwebtoken = "9.2"
-chrono = { version = "0.4", features = ["serde"] }
+# SPRINT 3: JWT and authentication dependencies
+jsonwebtoken = "9.2.0"
+chrono = "0.4.35"
+dotenvy = "0.15.7"
+lazy_static = "1.4.0"
+axum-extra = { version = "0.9.2", features = ["cookie"] }
 
 [dev-dependencies]
-reqwest = { version = "0.11.26", default-features = false, features = ["json"] }
+reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }
 fake = "=2.3.0"
 quickcheck = "0.9.2"
 quickcheck_macros = "0.9.1"
