--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -12,6 +12,7 @@ tower-http = { version = "0.5.0", features = ["fs"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 uuid = { version = "1.7.0", features = ["v4", "serde"] }
+rand = "0.8.5"
 async-trait = "0.1.78"
 validator = "0.16.1"
 # SPRINT 3: JWT and authentication dependencies
