--- a/auth-service/Cargo.toml
+++ b/auth-service/Cargo.toml
@@ -21,6 +21,9 @@ chrono = "0.4.35"
 dotenvy = "0.15.7"
 lazy_static = "1.4.0"
 axum-extra = { version = "0.9.2", features = ["cookie"] }
+sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "postgres", "migrate" ] }
+argon2 = { version = "0.5.3", features = ["std"] }
+redis = { version = "0.25.2", features = ["tokio-comp"] }
 
 [dev-dependencies]
 reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }
