Fix CI/CD workflow: add missing POSTMARK_AUTH_TOKEN environment variable
The auth-service build was failing because the POSTMARK_AUTH_TOKEN environment
variable was missing from the GitHub Actions workflow. This variable is required
for the application to compile and run tests successfully.

--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -66,6 +66,7 @@ jobs:
       run: |
         export JWT_SECRET=secret
         export DATABASE_URL=postgres://postgres:${{ secrets.POSTGRES_PASSWORD }}@localhost:5432
+        export POSTMARK_AUTH_TOKEN=${{ secrets.POSTMARK_AUTH_TOKEN }}
         cargo build --verbose
         cargo test --verbose
 
